# fiber_pi

./: .gitignore  CODESPACES.md  Cargo.toml  DEMO.md  RAILWAY.md  README.md  nixpacks.toml  railway.json
.devcontainer/: devcontainer.json
crates/lspd/: Cargo.toml
crates/lspd/src/: config.rs  error.rs  fee.rs  fiber_rpc.rs  lib.rs  lsp_api.rs  main.rs  model.rs  order_store.rs  state_machine.rs  watchers.rs
demo-ui/: app.js  index.html  package.json  server.js  styles.css
docs/: demo-runbook.md  implementation-plan.md  milestone-0.md  milestone-3.md  milestone-4.md  milestone-5.md  milestone-6.md  observability-moat.md  rpc-examples.md
scripts/: check-env.sh  codespaces-demo-pay.sh  codespaces-demo-start.sh  connect-demo-peers.sh  demo-addresses.sh  demo-run-payment.sh  demo-start.sh  demo-stop.sh  init-demo-nodes.sh  prepare-fiber.sh  probe-demo-nodes.sh  railway-build.sh  railway-demo-start.sh  record-demo-pay.sh  record-demo-start.sh  start-node.sh
